--- a/style.css
+++ b/style.css
@@ -23,30 +23,29 @@ html {
 .header-notice {
   display: flex;
   background-color: black;
-  color: white;
-  align-items: center;
   padding: 0 20px;
+  align-items: center;
 }
 
 .header-notice__link {
   display: flex;
   color: #ffffff;
   text-decoration: none;
-  align-items: center;
   font-size: 1.2rem;
 }
 
 .header-notice__icon {
-  height: 14px;
-  width: 14px;
   margin-right: 13px;
-  transform: scale(1.5);
+  padding: 2px 0;
+}
+
+.header-notice__link > span {
+  padding: 3px 0;
 }
 
 .header-nav {
   padding: 0 20px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -56,6 +55,7 @@ html {
 
 .header-nav__menu {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   width: 148px;
 }
