--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid #cccccc;
 }
 
 .header-stores:hover {
@@ -196,6 +196,7 @@ html {
   text-overflow: ellipsis;
   white-space: nowrap;
   right: 20px;
+  text-align: right;
 }
 
 #iphone-se-background {
