Add campaign elements and styles

--- a/page.css
+++ b/page.css
@@ -15,9 +15,17 @@ html {
   margin: 0 20px;
 }
 
+.main {
+  padding: 40px 20px;
+}
+
 @media screen and (min-width: 600px) {
   .horizontal-line {
     margin: 0 30px;
+  }
+
+  .main {
+    padding: 0 30px;
   }
 }
 
@@ -25,10 +33,18 @@ html {
   .horizontal-line {
     margin: 0 50px;
   }
+
+  .main {
+    padding: 0 50px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .horizontal-line {
     margin: 0 70px 0 10%;
+  }
+
+  .main {
+    padding: 0 70px 0 10%;
   }
 }
