--- a/page.css
+++ b/page.css
@@ -25,7 +25,7 @@ html {
   }
 
   .main {
-    padding: 0 30px;
+    padding: 60px 30px;
   }
 }
 
@@ -35,7 +35,7 @@ html {
   }
 
   .main {
-    padding: 0 50px;
+    padding: 60px 50px;
   }
 }
 
@@ -45,6 +45,6 @@ html {
   }
 
   .main {
-    padding: 0 70px 0 10%;
+    padding: 60px 70px 60px 10%;
   }
 }
