Change hover style for dark themed carousel items

--- a/campaign-carousel/campaign-carousel.css
+++ b/campaign-carousel/campaign-carousel.css
@@ -38,6 +38,10 @@
   background: #ffffff;
 }
 
+.item__body--dark .item__link:hover {
+  background: #f5f5f5;
+}
+
 .item__body--pink {
   background: #eeddd9;
 }
