--- a/campaign-carousel/campaign-carousel.css
+++ b/campaign-carousel/campaign-carousel.css
@@ -33,6 +33,7 @@
   justify-content: center;
   padding-bottom: 5px;
   position: absolute;
+  visibility: hidden;
   width: 40px;
 }
 
@@ -51,6 +52,10 @@
   right: 0;
   top: 45%;
   transform: translateX(50%);
+}
+
+.carousel__scroll-btn--visible {
+  visibility: visible;
 }
 
 .item {
