--- a/campaign-carousel/campaign-carousel.css
+++ b/campaign-carousel/campaign-carousel.css
@@ -1,12 +1,12 @@
 .carousel {
   display: grid;
-  grid-column-gap: 10px;
-  grid-template-columns: repeat(9, calc(calc(100% - 30px) / 2.05));
+  grid-column-gap: 20px;
+  grid-template-columns: repeat(9, calc(calc(100% - 30px) / 1.08));
   grid-template-rows: 1fr;
   overflow-x: scroll;
   scrollbar-color: #111111 #dfdfdf;
   scrollbar-width: thin;
-  width: 104%;
+  width: 110%;
 }
 
 .carousel::-webkit-scrollbar {
@@ -82,7 +82,7 @@
   display: grid;
   row-gap: 10px;
   grid-template-rows: auto 1fr auto;
-  padding: 40px;
+  padding: 33px;
 }
 
 .item__body--dark {
@@ -131,11 +131,13 @@
 }
 
 .item__headline {
-  font-size: 2.5rem;
+  font-size: 1.7rem;
+  line-height: 1.8;
 }
 
 .item__subline {
-  font-size: 1.7rem;
+  font-size: 1.6rem;
+  line-height: 1.7;
 }
 
 .item__link {
@@ -157,9 +159,21 @@
   cursor: pointer;
 }
 
+@media screen and (min-width: 600px) {
+  .carousel {
+    grid-column-gap: 10px;
+    grid-template-columns: repeat(9, calc(calc(100% - 30px) / 2.15));
+  }
+
+  .item__headline {
+    font-size: 2.5rem;
+  }
+}
+
 @media screen and (min-width: 900px) {
   .carousel {
     grid-column-gap: 20px;
     grid-template-columns: repeat(9, calc(calc(100% - 60px) / 3));
+    width: 100%;
   }
 }
