Add styles for min-width 900px

--- a/product-category-campaigns/product-category-campaigns.css
+++ b/product-category-campaigns/product-category-campaigns.css
@@ -58,3 +58,10 @@
     grid-template-rows: 1fr 1fr;
   }
 }
+
+@media screen and (min-width: 900px) {
+  .categories {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+}
