--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -7,6 +7,7 @@
   grid-template-rows: 1fr;
   column-gap: 10px;
   scrollbar-width: none;
+  margin-bottom: 10px;
 }
 
 .gallery__categories::-webkit-scrollbar {
