--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -38,28 +38,36 @@
   border: 1px solid black;
 }
 
-.gallery__images {
+.gallery__grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   row-gap: 20px;
   column-gap: 20px;
 }
 
+.gallery__grid-item {
+  grid-column: span 1;
+  grid-row: span 4;
+  position: relative;
+}
+
 .gallery__img {
   height: 100%;
   width: 100%;
-  grid-column: span 1;
-  grid-row: span 4;
   object-fit: cover;
 }
 
-.gallery__img:nth-of-type(2) {
+.gallery__grid-item:nth-of-type(2) {
   aspect-ratio: 1 / 1;
   grid-row: span 3;
 }
 
+.product {
+  position: absolute;
+}
+
 @media screen and (min-width: 600px) {
-  .gallery__images {
+  .gallery__grid {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
